--- a/views/booking_view.xml
+++ b/views/booking_view.xml
@@ -22,6 +22,7 @@
         <field name="arch" type="xml">
             <form string="Booking Form">
                 <header>
+                    <button name="action_open_hotel_search" type="object" string="🏨 Search Hotel" class="btn-primary" invisible="state != 'draft'"/>
                     <button name="action_accept" type="object" string="Confirm" class="btn-primary oe_highlight" invisible="state not in('draft')"/>
                     <button name="action_decline" type="object" string="Decline" invisible="state not in('draft','confirmed')"/>
                     <button name="action_send_invoice" type="object" string="Send Invoice" class="btn-primary" invisible="state != 'confirmed'"/>
@@ -44,12 +45,30 @@
                         <group string="Guest Information">
                             <field name="adult_count"/>
                             <field name="child_count"/>
-                            <field name="infant_count"/>
+                            <field name="child_age_1" invisible="child_count &lt; 1"/>
+                            <field name="child_age_2" invisible="child_count &lt; 2"/>
+                            <field name="child_age_3" invisible="child_count &lt; 3"/>
+                            <field name="child_age_4" invisible="child_count &lt; 4"/>
+                            <field name="child_age_5" invisible="child_count &lt; 5"/>
                             <field name="total_guests"/>
+                        </group>
+                        <group string="Hotel Booking Information" invisible="not hotel_id">
+                            <field name="hotel_name" readonly="1"/>
+                            <field name="hotel_city_id" readonly="1"/>
+                            <field name="room_type_title" readonly="1"/>
+                            <field name="rate_plan_title" readonly="1"/>
+                            <field name="price_to_pay" readonly="1"/>
+                            <field name="total_price" readonly="1"/>
+                            <field name="currency" readonly="1"/>
                         </group>
                         <group>
                             <field name="description" widget="text" placeholder="Description"/>
                         </group>
+                        <!-- Hidden fields for storing hotel data -->
+                        <field name="hotel_id" invisible="1"/>
+                        <field name="room_type_external_id" invisible="1"/>
+                        <field name="rate_plan_id" invisible="1"/>
+                        <field name="supplier_name" invisible="1"/>
                     </group>
                 </sheet>
                 <chatter/>
